fix: adjust navbar brand image margin for better alignment on mobile

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -3213,7 +3213,7 @@ display: none;
   .navbar-brand img{
     max-width: 50px!important;
     margin-top: 20px;
-    margin-bottom: 0;
+    margin-bottom: -20px;
   }
 }
 
